# InformaPDF-PDF_Extraction_And_Querying

./: README.md
Application/: .env  .gitignore  Dockerfile  Dockerfile.streamlit  FastApi.py  Streamlit.py  docker-compose.yml  fast.py  pyproject.toml  requirements.txt  streamlit.py
Code/: pipeline1.py  upload_to_gcs.py
Code/AIRFLOW_PIPELINE/: .gitignore  docker-compose.yaml
Code/AIRFLOW_PIPELINE/dags/: pipeline1.py
Diagrams/: Diagrams.py
Documents/: PDF Extraction API Evaluation Template.docx  Summary Sheet.docx
PDF Analysis/pdfextract_pdfco/2023/test/: 021a5339-744f-42b7-bd9b-9368b3efda7a.txt  634fca59-03b2-4cdf-9ce4-0205df22f256.txt  7c215d46-91c7-424e-9f22-37d43ab73ea6.txt  8f697523-6988-4c4f-8d72-760a45681f68.txt  b3654e47-4307-442c-a09c-945b33b913c6.txt  be353748-74eb-4904-8f17-f180ce087f1a.txt  c4456885-2f03-436f-8fe9-0b4ca6822cdb.txt  d50b8ecb-a8aa-4696-ad84-403ef15e2c8b.txt
